# ICP

./: CMakeLists.txt  Makefile  README.md  run.sh
src/: icp.cpp  icp.h  main.cpp  test.cpp
